# PaperclipMaximiser

./: .env  .gitignore  Dockerfile  README.md  __main__.py  action.yml  cortex.client.yaml  cortex.factorio.yaml  cortex.yaml  deploy.sh  factorio_cluster.yaml  listening.sh  logs.sh  main.py  o1-prompt.md  pyproject.toml  pytest.ini  pyvenv.cfg  rcon.sh  requirements.txt  sample_prompt.md  setup_docker_repo.sh  token.txt  write-settings.sh
actions/: count_item.lua
client/: Dockerfile  __init__.py  __main__.py  action_interface.py  actions.py  build.sh  docker-compose.yml  environment.py  factorio.py  factorio_client.py  factorio_entities.py  factorio_instance.py  factorio_pool.py  factorio_rcon_utils.py  factorio_runner.py  factorio_types.py  llama.jsonl  llama_events.jsonl  main.py  observation_interface.py  requirements.txt  setup_docker_repo.sh  test.py  utils.py  vocabulary.py
data/: README.md  blueprint_analyzer.py  blueprint_analyzer_with_connect.py  blueprint_analyzer_with_place_next_to.py  blueprint_metadata_generator.py  blueprint_refactor.py  factorio_school.py  loop_generator2.py  parse_blueprints.py  processing_state.py  screenshots_to_mp4.py  trajectory_generator.py  util.py
docs/: index.html
factorio/: Dockerfile  Dockerfile2  README.md  append.sh  build.sh  build_alternative_installation_location.sh  build_base.sh  commit.sh  configure.sh  cortex.yaml  probe.sh  run_local.sh  setup_docker_repo.sh
llama/: main.py
scripts/: run.psl  run.sh
src/: .example_env_file  __init__.py  __main__.py  cluster.cloudformation.yaml  cluster_ip.py  main.py  (+20 more)
(+2432 files in other folders)
