[project]
name = "paperclip-maximiser"
version = "0.1.0"
dependencies = [
    "anthropic>=0.42.0",
    "anyio>=4.8.0",
    "backoff>=2.2.1",
    "construct>=2.10.70",
    "factorio-rcon-py>=2.1.3",
    "fonttools>=4.55.3",
    "imageio>=2.36.1",
    "lupa>=2.3",
    "neptune>=1.13.0",
    "numpy>=2.2.1",
    "openai>=1.59.5",
    "pillow>=11.1.0",
    "psycopg2>=2.9.10",
    "pyautogui>=0.9.54",
    "pydantic>=2.10.5",
    "pygame>=2.6.1",
    "pyopenssl==24.0.0",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "scikit-image>=0.25.0",
    "scipy>=1.15.0",
    "slpp>=1.2.3",
    "tenacity>=9.0.0",
    "torch>=2.5.1",
]
requires-python = ">=3.10,<=3.12"

[tool.uv.sources]
slpp = { git = "https://github.com/SirAnthony/slpp" }

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["src/tests"]
python_files = "test_*.py"

[tool.pyright]
venvPath = "."
venv = ".venv"
